# Project-Sequence-design

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
archives/: Project_潘俊宏楊浩陳冠綸朱柏宇23.01.06更新.rar  ZCP_L41.rar
data/reference/czcs/: length_10_CZCS.csv  length_11_CZCS.csv  length_2_CZCS.csv  length_3_CZCS.csv  length_4_CZCS.csv  length_5_CZCS.csv  length_6_CZCS.csv  length_7_CZCS.csv  length_8_CZCS.csv  length_9_CZCS.csv
data/reference/gcs/: length_7_GCS.csv
docs/: ARCHITECTURE.md  CV_NOTES.md  VALIDATION_REPORT.md
examples/: verify_zcp.py
legacy/: README.md
legacy/final/: E1_GCP_finding.m  E1_GCP_pairing.m  E1_GCP_sumACCF_constrction8.m  aacf_c.mexw64  accf_c.mexw64  final_project_2.m  finding_seqL.mexw64
legacy/midterm/: L37_Z19_ZCP_FinalEdition.m  aacfse2_c.c  aacfse2_c.mexw64  finding_seq37.c  finding_seq37.mexw64  finding_seq41.c  finding_seq41.mexw64  kronecker_L34_Z18.m  kronecker_L36_Z26.m
legacy/zcp_l41/: L41_result.txt  ZCP＿final2.m
reports/: 期中序列報告(22.12.13更新).pptx  期末序列報告20230106更新.pptx
src/sequence_design/: __init__.py  cli.py  constructions.py  correlation.py  properties.py  search.py  sequences.py  validation.py
tests/: test_cli.py  test_constructions.py  test_correlation.py  test_properties.py  test_search.py  test_sequences.py  test_validation.py
