[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sequence-design"
version = "1.0.0"
description = "Reproducible tools for binary ZCP, GCP, and CZCS sequence design"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Project Sequence Design contributors" }
]
keywords = [
  "signal-processing",
  "zero-correlation-pair",
  "golay-complementary-pair",
  "czcs",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.scripts]
sequence-design = "sequence_design.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

